--- a/league/templates/league/index.html
+++ b/league/templates/league/index.html
@@ -1,2 +1,13 @@
-There are {{number_of_leauges}} leagues
+There are {{number_of_leagues}} leagues
 <a href="/l/create">Create a new league</a>
+
+
+{% if list_of_leagues %}
+<ul>
+    {% for league in list_of_leagues %}
+    <li><a href="/l/{{ league.id }}/">{{ league.name }}</a></li>
+    {% endfor %}
+</ul>
+{% else %}
+<p>No leages are available... perhaps a server errors</p>
+{% endif %}
