--- a/league/templates/league/index.html
+++ b/league/templates/league/index.html
@@ -11,3 +11,6 @@ There are {{number_of_leagues}} leagues
 {% else %}
 <p>No leages are available... perhaps a server errors</p>
 {% endif %}
+
+
+<a href="{% url 'logout' %}">Log Out</a>
