--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,4 +1,6 @@
-<html>
+{% extends 'base.html' %}
+
+{% block mymessage %}
 
 <form method="post">
     login here
@@ -12,4 +14,4 @@
 
 </form>
 
-</html>
+{% endblock %}
