--- a/league/templates/league/index.html
+++ b/league/templates/league/index.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block mymessage %}
 There are {{number_of_leagues}} leagues
 <a href="/l/create">Create a new league</a>
 
@@ -14,3 +17,4 @@ There are {{number_of_leagues}} leagues
 
 
 <a href="{% url 'logout' %}">Log Out</a>
+{% endblock %}
