--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,5 +1,6 @@
-<html>
+{% extends 'base.html' %}
 
+{% block mymessage %}
 <form method="post">
     {% csrf_token %}
 
@@ -12,5 +13,4 @@
     <button type="submit">Submit</button>
 
 </form>
-
-</html>
+{% endblock %}
