--- a/fantasy_box_office/templates/base.html
+++ b/fantasy_box_office/templates/base.html
@@ -1,8 +1,24 @@
 <html>
 
-<body>
+<head>
+    <style>
+        html {
+            font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        }
+    </style>
+</head>
 
-    <h1>header</h1>
+<body>
+    <header>
+        <a class="logo" href="#">show time</a>
+        <nav>
+            <a href="/l/">All leauges</a> |
+            <!-- if user is not logged in hide the following 3 links and replace them with login -->
+            <a href="#">Your leagues</a> |
+            <a href="#">Profile</a> |
+            <a href="/logout/">Logout</a>
+        </nav>
+    </header>
 
     {% block mymessage %}
     {% endblock %}
