getting nav in place

--- a/fantasy_box_office/templates/base.html
+++ b/fantasy_box_office/templates/base.html
@@ -14,9 +14,13 @@
         <nav>
             <a href="/l/">All leauges</a> |
             <!-- if user is not logged in hide the following 3 links and replace them with login -->
+            {% if user.is_authenticated %}
             <a href="#">Your leagues</a> |
             <a href="#">Profile</a> |
             <a href="/logout/">Logout</a>
+            {% else %}
+            <a href="/login/">Login</a>
+            {% endif %}
         </nav>
     </header>
 
