--- a/league/templates/league/details.html
+++ b/league/templates/league/details.html
@@ -4,23 +4,27 @@
 <form method="post">
     {% csrf_token %}
     <h1>you are looking at league: {{ current_league }}</h1>
-
-
-
-
-    {% if current_league.players.all %}
-    <br>
-    players in this leauge
-    <ul>
-        {% for player in current_league.players.all %}
-        <li><a href="/u/{{ player.id }}/">{{ player }}</a> {% if user.id == player.id%} <button type="submit"
-                name="league_leave" value="Leave">Leave</button>{% endif %}</li>
-        {% endfor %}
-    </ul>
-
+    {% if is_active_user_in_leauge %}
+    <button type="submit" name="league_leave" value="Leave">Leave</button>
     {% else %}
-    <p>No one is in this leauge</p>
-    {% endif %}
     <button type="submit" name="league_join" value="Join">Join</button>
+    {% endif %}
+
 </form>
+
+
+
+{% if current_league.players.all %}
+<br>
+players in this leauge
+<ul>
+    {% for player in current_league.players.all %}
+    <li><a href="/u/{{ player.id }}/">{{ player }}</a></li>
+    {% endfor %}
+</ul>
+
+{% else %}
+<p>No one is in this leauge</p>
+{% endif %}
+
 {% endblock %}
