Main focus is the movies page. I also cleaned up some template naming stuff, and had to add some routing stuff

--- a/league/templates/league/index.html
+++ b/league/templates/league/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block mymessage %}
+{% block content %}
 There are {{number_of_leagues}} leagues
 <a href="/l/create">Create a new league</a>
 
