--- a/league/templates/league/details.html
+++ b/league/templates/league/details.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block mymessage %}
+{% block content %}
 <form method="post">
     {% csrf_token %}
     <h1>you are looking at league: {{ current_league }}</h1>
