light refactoring for less typing

--- a/movies/templates/movies/details.html
+++ b/movies/templates/movies/details.html
@@ -1,5 +1,7 @@
 {% extends 'base.html'%}
 
 {% block content %}
-{{ current_movie }}
+<h1>{{ movie.original_title }}</h1>
+<p>{{movie.overview}}</p>
+{{movie.release_date}}
 {% endblock%}
