--- a/league/templates/league/team.html
+++ b/league/templates/league/team.html
@@ -1,16 +1,11 @@
-{% extends 'base.html' %}
-
+{% extends "base.html" %}
 {% block content %}
-{{team.team_name}}
-
-{% if team.movie_picks.all %}
-<ul>
-    {% for movie in team.movie_picks.all %}
-    <li>{{movie.title}}</li>
-    {% endfor %}
-</ul>
-{% else %}
-You don't seem to have any movie picks
-{% endif%}
-
-{% endblock %}
+    {{ team.team_name }}
+    {% if team.movie_picks.all %}
+        <ul>
+            {% for movie in team.movie_picks.all %}<li>{{ movie.title }}</li>{% endfor %}
+        </ul>
+    {% else %}
+        You don't seem to have any movie picks
+    {% endif %}
+{% endblock content %}
