--- a/fantasy_box_office/templates/base.html
+++ b/fantasy_box_office/templates/base.html
@@ -1,7 +1,10 @@
-<html>
-
-<head>
-    <style>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Fantasy Box Office</title>
+        <meta name="description" content="Fantasy game using movies" />
+        <meta name="keywords" content="Fantasy, Movie, Game" />
+        <style>
         html {
             font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         }
@@ -23,27 +26,23 @@
         nav a {
             margin: 10px;
         }
-    </style>
-</head>
-
-<body>
-    <header>
-        <a class="logo" href="/l/">show time</a>
-        <nav>
-            <a href="/l/">All leagues</a> |
-            {% if user.is_authenticated %}
-            <a href="/myleagues/">Your leagues</a> |
-            <a href="#">Profile</a> |
-            <a href="/logout/">Logout</a>
-            {% else %}
-            <a href="/login/">Login</a>
-            {% endif %}
-        </nav>
-    </header>
-
-    {% block content %}
-    {% endblock %}
-
-</body>
-
+        </style>
+    </head>
+    <body>
+        <header>
+            <a class="logo" href="{% url 'leagues' %}">show time</a>
+            <nav>
+                <a href="{% url 'leagues' %}">All leagues</a> |
+                {% if user.is_authenticated %}
+                    <a href="{% url 'my_leagues' %}">Your leagues</a> |
+                    <a href="#">Profile</a> |
+                    <a href="{% url 'logout' %}">Logout</a>
+                {% else %}
+                    <a href="{% url 'login' %}">Login</a>
+                {% endif %}
+            </nav>
+        </header>
+        {% block content %}
+        {% endblock content %}
+    </body>
 </html>
