--- a/league/templates/league/details.html
+++ b/league/templates/league/details.html
@@ -1,31 +1,31 @@
-{% extends 'base.html' %}
-
+{% extends "base.html" %}
 {% block content %}
-<form method="post">
-    {% csrf_token %}
-    <h1>you are looking at league: {{ current_league }}</h1>
-    {% if is_active_user_in_leauge %}
-    <button type="submit" name="league_leave" value="Leave">Leave</button>
+    <form method="post">
+        {% csrf_token %}
+        <h1>you are looking at league: {{ current_league }}</h1>
+        {% if is_active_user_in_leauge %}
+            <button type="submit" name="league_leave" value="Leave">Leave</button>
+        {% else %}
+            <button type="submit" name="league_join" value="Join">Join</button>
+            <input type="text"
+                   name="team_name"
+                   placeholder="Team Name"
+                   required
+                   minlength="3"
+                   maxlength="30"/>
+        {% endif %}
+    </form>
+    {% if teams.all %}
+        <br />
+        players in this leauge
+        <ul>
+            {% for team in teams.all %}
+                <li>
+                    <a href="{% url 'team_details' current_league.id team.id %}">{{ team.team_name }}</a>
+                </li>
+            {% endfor %}
+        </ul>
     {% else %}
-    <button type="submit" name="league_join" value="Join">Join</button>
-    <input type="text" name="team_name" placeholder="Team Name" required minlength="3" maxlength="30">
+        <p>No one is in this leauge</p>
     {% endif %}
-
-</form>
-
-
-
-{% if teams.all %}
-<br>
-players in this leauge
-<ul>
-    {% for team in teams.all %}
-    <li><a href="/l/{{current_league.id}}/t/{{ team.id }}/">{{ team.team_name }}</a></li>
-    {% endfor %}
-</ul>
-
-{% else %}
-<p>No one is in this leauge</p>
-{% endif %}
-
-{% endblock %}
+{% endblock content %}
