--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -1,18 +1,15 @@
-{% extends 'base.html' %}
-
+{% extends "base.html" %}
 {% block content %}
-
-<h2>Upcoming movies</h2>
-
-{% if upcoming_movies %}
-<ul>
-    {% for movie in upcoming_movies %}
-    <li><a href="/movies/{{movie.id}}">{{ movie.title }}</a> - {{movie.release_date}}</li>
-    {% endfor %}
-</ul>
-{% else %}
-<p>No upcoming movies, either apocolypse is happening or there is a server error</p>
-{% endif %}
-
-
-{% endblock %}
+    <h2>Upcoming movies</h2>
+    {% if upcoming_movies %}
+        <ul>
+            {% for movie in upcoming_movies %}
+                <li>
+                    <a href="{% url 'movie_detail' movie.id %}">{{ movie.title }}</a> - {{ movie.release_date }}
+                </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>No upcoming movies, either apocolypse is happening or there is a server error</p>
+    {% endif %}
+{% endblock content %}
