ability to add a movie to your team if you have multiple teams. I am sorry about bootstrap

--- a/fantasy_box_office/templates/base.html
+++ b/fantasy_box_office/templates/base.html
@@ -4,6 +4,8 @@
         <title>Fantasy Box Office</title>
         <meta name="description" content="Fantasy game using movies" />
         <meta name="keywords" content="Fantasy, Movie, Game" />
+        <link rel="stylesheet"
+              href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
         <style>
         html {
             font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -42,7 +44,20 @@
                 {% endif %}
             </nav>
         </header>
+        {% include "messages.html" %}
+        {% block error %}
+            {% if error %}
+                <div>
+                    <h2>Error: {{ errror }}</h2>
+                </div>
+            {% else %}
+                test
+            {% endif %}
+        {% endblock error %}
         {% block content %}
         {% endblock content %}
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
     </body>
 </html>
