--- a/fantasy_box_office/templates/messages.html
+++ b/fantasy_box_office/templates/messages.html
@@ -3,7 +3,7 @@
         <div class="container-fluid p-0">
             <div class="alert {{ message.tags }} alert-dismissible" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="True">&times;</span>
+                    <span aria-hidden="True">X</span>
                 </button>
                 {{ message }}
             </div>
